-
Bug
-
Resolution: Fixed
-
P2: Important
-
Qt Creator 18.0.0-beta2
-
None
-
-
d4c20831c (18.0)
Steps to reproduce:
- create widgets application from template (no quick application!)
- enable QmlDebugging on build and run settings
- start debugging
- when the widget application has started close it again by using the X (close button) of the widget's title
- application appears to be still running (no "...finished" on application output pane)
[this is due to qmldebugger still trying to connect] - check Debug view > Debugger Presets
[this still lists QML for "..." as running debugger, right click on this and using "Abort Debugger" cleanly stops the debugger, "finished" message appears on Application Output] - using Stop on Application output closes the QML debugger, and prints the finished message, but keeps the stop button enabled and you have to close the tab and use Force Quit
Note: Using the Stop button on Application Output pane worked using 17.0.. so, kind of a regression.
| For Gerrit Dashboard: QTCREATORBUG-33590 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 681519,4 | Debugger: Stop all engines when primary engine finishes | 18.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |