Debugger: Stop all engines when primary engine finishes

When QML debugger is running along with cpp debugger,
and when the debugged process is finished, only
the cpp engine finishes spontaneously, but qml one
continues to run.

As a fix - stop all engines when the primary one is finished.

Fixes: QTCREATORBUG-33590
Change-Id: I64dd20281a94997199a16e9201ba723296dae2eb
Reviewed-by: Christian Stenger <christian.stenger@qt.io>
Reviewed-by: hjk <hjk@qt.io>